# compute-shader-samples

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
boxblur/: CMakeLists.txt  boxblur.cpp
common/: gl_helper.h  helper.h
convert2bw/: CMakeLists.txt  convert2bw.cpp
convert2gray/: CMakeLists.txt
img_generation/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt
opengl/boxblur/: CMakeLists.txt  boxblur.cpp
opengl/common/: gl_helper.h  helper.h
opengl/convert2gray/: CMakeLists.txt  convert2gray.comp  convert2gray.cpp
opengl/img_generation/: CMakeLists.txt  img_generation.comp
opengl/ssbo_sample/: CMakeLists.txt  ssbo_sample.cpp
shaders/glsl/: boxblur.comp  convert2bw.comp  img_generation.comp  ssbo_sample.comp
ssbo_sample/: CMakeLists.txt  main.cpp  ssbo_sample.cpp
webgpu/buffer/: index.html  main.js
